# OS

./: child.lab2  parent.lab2
678lab/: README.txt  client.cpp
678lab_/: client  main
lab2/: ОСИ_Отчет#2.docx
lab3/: README.txt  main.c  main_of.c
lab3/lab3/: a.out  hello  hello.c  main3-.cpp  main3.cpp  main33.c  main3_s  main3_s.c  main_ler.cpp
lab4/: README.txt  main.c  main3_s.c  main4.c  main_ler
lab4_do/: hello  main  main.c  main2  main3.cpp  main4.c  makefile.txt
lab5/: prog1_comments.cpp  prog2.cpp  prog2_comments.cpp  re1.cpp  re2.cpp
lab5_/: Makefile.file  prog1.cpp  prog2_comments.cpp  re1.cpp  re2.cpp
src/: CMakeLists.txt  client.cpp  functions.h  server.cpp
